--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
+    "amqplib": "^0.10.3",
     "auto-bind": "^4.0.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "joi": "^17.9.2",
     "nanoid": "^3.3.6",
     "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "eslint": "^8.44.0",
